# teikitu_release

./: .gitignore
teikitu/inc/: TgS Collision.h  TgS Common.h  TgS Ring 0 - Type.h
teikitu/inc/TgS COLLISION/: TgS Collision - Constants.h  TgS Collision - F - Box AA-Box AA.i_inc  TgS Collision - F - Box AA-Plane.i_inc  TgS Collision - F - Box AA-Point.i_inc  TgS Collision - F - Box AA-Sphere.i_inc  TgS Collision - F - Box AA-Triangle.i_inc  TgS Collision - F - Box AA.h_inc  TgS Collision - F - Box [Util].i_inc  TgS Collision - F - Box-Line.i_inc  TgS Collision - F - Box-Linear.i_inc  TgS Collision - F - Box-Plane.i_inc  TgS Collision - F - Box-Point.i_inc  TgS Collision - F - Box-Ray.i_inc  TgS Collision - F - Box-Segment.i_inc  TgS Collision - F - Box-Sphere.i_inc  TgS Collision - F - Box-Triangle.i_inc  TgS Collision - F - Box.h_inc  TgS Collision - F - Capsule [Util].i_inc  TgS Collision - F - Capsule-Capsule.i_inc  TgS Collision - F - Capsule-Line.i_inc  TgS Collision - F - Capsule-Linear.i_inc  TgS Collision - F - Capsule-Plane.i_inc  TgS Collision - F - Capsule-Point.i_inc  TgS Collision - F - Capsule-Ray.i_inc  TgS Collision - F - Capsule-Segment.i_inc  TgS Collision - F - Capsule-Sphere.i_inc  TgS Collision - F - Capsule-Triangle.i_inc  TgS Collision - F - Capsule.h_inc  TgS Collision - F - Circle-Circle.i_inc  TgS Collision - F - Circle-Line.i_inc  TgS Collision - F - Circle-Point.i_inc  TgS Collision - F - Circle-Ray.i_inc  TgS Collision - F - Circle-Segment.i_inc  TgS Collision - F - Circle.h_inc  TgS Collision - F - Cylinder-Line.i_inc  TgS Collision - F - Cylinder-Linear.i_inc  TgS Collision - F - Cylinder-Plane.i_inc  TgS Collision - F - Cylinder-Ray.i_inc  TgS Collision - F - Cylinder-Segment.i_inc  TgS Collision - F - Cylinder.h_inc  (+61 more)
teikitu/inc/TgS COMMON/: TgS (APPLE) Common - Math [Matrix] [F32] [34].inl  TgS (APPLE) Common - Math [Matrix] [F32] [44].inl  TgS (APPLE) Common - Math [Matrix].inl  TgS (APPLE) Common - Math [Vector] [F32].inl  TgS (APPLE) Common - Math [Vector] [F32_04].inl  TgS (APPLE) Common - Math [Vector].h  TgS (APPLE) Common - Math [Vector].i_inc  TgS (APPLE) Common - Math [Vector].inl  TgS (C11_64) Common - Base - Defines [Hardware].h  TgS (C11_64) Common - Base - Include.h  TgS (CLANG) Common - Base - API [Platform].inl  TgS (CLANG) Common - Base - Defines [Compiler].h  TgS (CLANG) Common - Math [Vector].h  TgS (POSIX) Common - Base - API [Platform].inl  TgS (POSIX) Common - Base - Defines [Platform].h  TgS (POSIX) Common - Base - Include.h  TgS (POSIX) Common - Base - Type [MT].h  TgS (POSIX) Common - Base - Type.h  TgS (POSIX) Common - Global.h  TgS (POSIX) Common - STg1_MT_MX.inl  TgS (POSIX) Common - STg1_MT_SM.inl  TgS (X86_64) Common - Base - API.h  TgS (X86_64) Common - Base - API.inl  TgS (X86_64) Common - Base - Defines [Hardware].h  TgS (X86_64) Common - Base - Include.h  TgS (X86_64) Common - Math [Matrix] [F] [34].inl  TgS (X86_64) Common - Math [Matrix] [F] [44].inl  TgS (X86_64) Common - Math [Matrix] [N] [F] [34].inl  TgS (X86_64) Common - Math [Matrix] [N] [F] [44].inl  TgS (X86_64) Common - Math [Matrix].inl  TgS (X86_64) Common - Math [Vector] [F32].inl  TgS (X86_64) Common - Math [Vector] [F32_04].inl  TgS (X86_64) Common - Math [Vector] [N] [F32].inl  TgS (X86_64) Common - Math [Vector] [N] [F32_04].inl  TgS (X86_64) Common - Math [Vector] [N] [S08].inl  TgS (X86_64) Common - Math [Vector] [N] [S16].inl  TgS (X86_64) Common - Math [Vector] [N] [S32].inl  TgS (X86_64) Common - Math [Vector] [N] [U08].inl  TgS (X86_64) Common - Math [Vector] [N] [U16].inl  TgS (X86_64) Common - Math [Vector] [N] [U32].inl  (+192 more)
teikitu/prj/: CMakeLists.txt  cmake_config.cmake  cmake_solution_name.cmake  flag_overrides.cmake  project_report.cmake
teikitu/prj/bootstrap/: CMakeLists.txt
teikitu/src/TgS COLLISION/: TgS Collision - F - Axis Projection.c_inc  TgS Collision - F - Box AA-Box AA.c_inc  TgS Collision - F - Box AA-Linear.c_inc  TgS Collision - F - Box AA-Plane.c_inc  TgS Collision - F - Box AA-Point.c_inc  TgS Collision - F - Box.c  (+81 more)
teikitu/tst/src/TgS COMMON/: CMakeLists.txt  TgS Common [Unit Test] - Common.c  TgS Common [Unit Test] - Geometry - Type.c_inc  TgS Common [Unit Test] - Geometry 2D - Rectangle.c_inc  TgS Common [Unit Test] - Geometry 3D - Box - Axis Aligned.c_inc  TgS Common [Unit Test] - Geometry 3D - Box.c_inc  TgS Common [Unit Test] - Geometry 3D - Capsule.c_inc  TgS Common [Unit Test] - Geometry 3D - Circle.c_inc  TgS Common [Unit Test] - Geometry 3D - Cylinder.c_inc  TgS Common [Unit Test] - Geometry 3D - Disk.c_inc  TgS Common [Unit Test] - Geometry 3D - Ellipse.c_inc  TgS Common [Unit Test] - Geometry 3D - Line.c_inc  TgS Common [Unit Test] - Geometry 3D - Mesh [BA].c_inc  TgS Common [Unit Test] - Geometry 3D - Mesh [BVT].c_inc  TgS Common [Unit Test] - Geometry 3D - Mesh [Simple].c_inc  TgS Common [Unit Test] - Geometry 3D - Parallelogram.c_inc  TgS Common [Unit Test] - Geometry 3D - Particle.c_inc  TgS Common [Unit Test] - Geometry 3D - Plane.c_inc  TgS Common [Unit Test] - Geometry 3D - Ray.c_inc  TgS Common [Unit Test] - Geometry 3D - Rectangle.c_inc  TgS Common [Unit Test] - Geometry 3D - Segment.c_inc  TgS Common [Unit Test] - Geometry 3D - Sphere.c_inc  TgS Common [Unit Test] - Geometry 3D - Torus.c_inc  TgS Common [Unit Test] - Geometry 3D - Triangle [Collision].c_inc  TgS Common [Unit Test] - Geometry 3D - Triangle [Edge].c_inc  TgS Common [Unit Test] - Geometry 3D - Triangle [Point].c_inc  TgS Common [Unit Test] - Geometry 3D - Triangle [Space].c_inc  TgS Common [Unit Test] - Geometry 3D - Tube.c_inc  TgS Common [Unit Test] - Geometry.c  TgS Common [Unit Test] - Internal.h  TgS Common [Unit Test] - Unit Test.c  TgS Common [Unit Test] - Util.c  TgS Common [Unit Test] [Case] - Base - API.c  TgS Common [Unit Test] [Case] - Base - Type.c  TgS Common [Unit Test] [Case] - Math [Matrix].c  TgS Common [Unit Test] [Case] - Math [Vector].c  TgS Common [Unit Test] [Set] - Base.c  TgS Common [Unit Test] [Set] - Geometry.c_inc  TgS Common [Unit Test] [Set] - Math.c  TgS Common [Unit Test] [Test] - Base - API [Math].c  (+58 more)
(+73 files in other folders)
